objects/autorabit__Package_Log__c.object
<CustomObject>
    <fields>
        <fullName>autorabit__Detail__c</fullName>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>autorabit__Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>autorabit__Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>autorabit__Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>autorabit__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Package Log</label>
    <listViews>
        <fullName>autorabit__All</fullName>
        <columns>NAME</columns>
        <columns>autorabit__Type__c</columns>
        <columns>autorabit__Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>autorabit__Debug_Logs</fullName>
        <columns>NAME</columns>
        <columns>autorabit__Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>autorabit__Type__c</field>
            <operation>equals</operation>
            <value>Debug</value>
        </filters>
        <label>Debug Logs</label>
    </listViews>
    <listViews>
        <fullName>autorabit__Error_Logs</fullName>
        <columns>NAME</columns>
        <columns>autorabit__Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>autorabit__Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Package Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>